--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.2.2",
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
+    "@reach/router": "^1.2.1",
     "@svgr/webpack": "4.1.0",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
