--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
+  "heroku-run-build-script": true,
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -77,6 +78,9 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "engines": {
+    "node": "10.x"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-decorators": "^7.3.0",
